--- a/api-laravel/docker-compose.yml
+++ b/api-laravel/docker-compose.yml
@@ -32,22 +32,21 @@ services:
             - pma-network
             - db-network
 
-    # Non obligatoire si pour une API, utilisation de php-fpm directement
-    # nginx:
-    #     image: nginx:alpine
-    #     container_name: nginx-container
-    #     restart: unless-stopped
-    #     depends_on:
-    #         - db
-    #         - php
-    #     ports:
-    #         - 7099:80
-    #     volumes:
-    #         - ./public:/var/www/public                            # Monté pour l'application web
-    #         - ./docker-compose/nginx/track-time.conf:/etc/nginx/conf.d/default.conf # Configuration de Nginx
-    #         - ./docker-compose/nginx/logs:/var/log/nginx          # Pour les logs de Nginx
-    #     networks:
-    #         - web-network
+    nginx:
+        image: nginx:alpine
+        container_name: nginx-container
+        restart: unless-stopped
+        depends_on:
+            - db
+            - php
+        ports:
+            - 7000:80
+        volumes:
+            - ./public:/var/www/public                            # Monté pour l'application web
+            - ./docker-compose/nginx/track-time.conf:/etc/nginx/conf.d/default.conf # Configuration de Nginx
+            - ./docker-compose/nginx/logs:/var/log/nginx          # Pour les logs de Nginx
+        networks:
+            - web-network
 
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
